# dogfight-simulator

./: CLAUDE.md  README.md
samples/simulator_dist/simulator/: .gitignore  CMakeLists.txt  MANIFEST.in.fragment  README.md  builder.bat  builder.sh  install_all.py  license.txt  pyproject.toml  setup.py  uninstall_all.py
samples/simulator_dist/simulator/ASRCAISim1/: GymManager.py  __init__.py  common.py
samples/simulator_dist/simulator/ASRCAISim1/callback/: EpisodeMonitor.py  __init__.py
samples/simulator_dist/simulator/ASRCAISim1/config/: Agent.json  Asset.json  Controller.json  CoordinateReferenceSystem.json  GodViewUIConfig.json  RulerAndReward.json  Viewer.json
samples/simulator_dist/simulator/ASRCAISim1/core/: __init__.py
samples/simulator_dist/simulator/ASRCAISim1/libCore/: __init__.py
samples/simulator_dist/simulator/ASRCAISim1/logger/: GUIStateLogger.py  GodViewLogger.py  LoggerSample.py  MultiEpisodeLogger.py  __init__.py
samples/simulator_dist/simulator/ASRCAISim1/policy/: StandalonePolicy.py  __init__.py
samples/simulator_dist/simulator/ASRCAISim1/scripts/: __init__.py  clean_at.py  find_core_plugins.py  setup_command.py
samples/simulator_dist/simulator/ASRCAISim1/share/cmake/: ASRCAISim1Config.cmake
samples/simulator_dist/simulator/ASRCAISim1/utility/: GraphicUtility.py
samples/simulator_dist/simulator/ASRCAISim1/viewer/: GodView.py  GodViewLoader.py  PygameViewer.py  PygameViewerLoader.py  __init__.py
samples/simulator_dist/simulator/core_plugins/HandyRLUtility/: pyproject.toml
samples/simulator_dist/simulator/core_plugins/HandyRLUtility/HandyRLUtility/: RecurrentBlock.py  StandaloneHandyRLPolicy.py  __init__.py  distribution.py  flatten_space.py  model.py
samples/simulator_dist/simulator/core_plugins/HandyRLUtility/doc/: Doxyfile
samples/simulator_dist/simulator/core_plugins/MatchMaker/: MANIFEST.in.fragment  pyproject.toml
samples/simulator_dist/simulator/core_plugins/MatchMaker/MatchMaker/: MatchMaker.py  MatchMakerForRay.py  PayOff.py  TwoTeamCombatMatchMaker.py
samples/simulator_dist/simulator/core_plugins/MatchMaker/doc/: Doxyfile
samples/simulator_dist/simulator/core_plugins/Supervised/: CMakeLists.txt  builder.bat  builder.sh  pyproject.toml
samples/simulator_dist/simulator/core_plugins/Supervised/Supervised/: AuxiliaryTaskUtilForHandyRL.py
samples/simulator_dist/simulator/core_plugins/Supervised/include/: SimpleSupervisedTaskSample.h  SupervisedTaskMixer.h
samples/simulator_dist/simulator/core_plugins/Supervised/src/: Main.cpp  SimpleSupervisedTaskSample.cpp  SupervisedTaskMixer.cpp
samples/simulator_dist/simulator/core_plugins/rayUtility/: pyproject.toml
samples/simulator_dist/simulator/core_plugins/rayUtility/rayUtility/: RayManager.py  __init__.py
samples/simulator_dist/simulator/core_plugins/torch_truncnorm/: pyproject.toml
samples/simulator_dist/simulator/core_plugins/torch_truncnorm/doc/: Doxyfile
samples/simulator_dist/simulator/doc/: Doxyfile
samples/simulator_dist/simulator/doc/scripts/: clean_docs.bat  clean_docs.sh  generate.bat  generate.sh
samples/simulator_dist/simulator/doc/src/: main.dox
samples/simulator_dist/simulator/docker/: Dockerfile  build_docker_image.sh  build_sim.sh  run_container.sh
samples/simulator_dist/simulator/docker/cli/: Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04
samples/simulator_dist/simulator/docker/vnc/: Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04
samples/simulator_dist/simulator/docker/xrdp/: Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  docker-entrypoint.sh
samples/simulator_dist/simulator/include/: Agent.h  Asset.h  Callback.h  Common.h  CommunicationBuffer.h  ConfigDispatcher.h  Controller.h  Coordinate.h  CoordinatedFighter.h  EkkerMDT.h  EkkerMissile.h  Entity.h  EntityIdentifier.h  Factory.h  Fighter.h  FilteredWeakIterable.h  FlightControllerUtility.h  GUIDataFrameCreator.h  JsonMutableFromPython.h  MassPointFighter.h  MathUtility.h  Missile.h  MotionState.h  ObservationModifierBase.h  PhysicalAsset.h  Propulsion.h  Pythonable.h  PythonableBase.h  Quaternion.h  Reward.h  Ruler.h  Sensor.h  SerializableAsReference.h  SerializableAsValue.h  SimulationManager.h  SixDoFFighter.h  StaticCollisionAvoider2D.h  TimeSystem.h  Track.h  Units.h  (+5 more)
samples/simulator_dist/simulator/include/crs/: AffineCRS.h  CoordinateReferenceSystem.h  CoordinateReferenceSystemBase.h  DerivedCRS.h  GeodeticCRS.h  ProjectedCRS.h  PureFlatCRS.h  TopocentricCRS.h
samples/simulator_dist/simulator/include/traits/: cereal.h  condition_for.h  converter.h  eigen.h  forwarder.h  is_derived_from_template.h  is_recursively_comparable.h  is_stl_container.h  is_string.h  json.h  pointer_like.h  pybind.h  traits.h
samples/simulator_dist/simulator/include/util/: dependency_graph.h  range_iterable.h
samples/simulator_dist/simulator/src/: Agent.cpp  Asset.cpp  Callback.cpp  CommunicationBuffer.cpp  ConfigDispatcher.cpp  Controller.cpp  Coordinate.cpp  CoordinatedFighter.cpp  EkkerMDT.cpp  EkkerMissile.cpp  Entity.cpp  EntityIdentifier.cpp  Factory.cpp  Fighter.cpp  FlightControllerUtility.cpp  GUIDataFrameCreator.cpp  JsonMutableFromPython.cpp  Main.cpp  MassPointFighter.cpp  MathUtility.cpp  Missile.cpp  MotionState.cpp  ObservationModifierBase.cpp  PhysicalAsset.cpp  Propulsion.cpp  Quaternion.cpp  Reward.cpp  Ruler.cpp  Sensor.cpp  SimulationManager.cpp  SixDoFFighter.cpp  StaticCollisionAvoider2D.cpp  TimeSystem.cpp  Track.cpp  Units.cpp  Utility.cpp  Viewer.cpp  WinLoseReward.cpp
samples/simulator_dist/simulator/src/crs/: AffineCRS.cpp  CoordinateReferenceSystem.cpp  CoordinateReferenceSystemBase.cpp  DerivedCRS.cpp  GeodeticCRS.cpp  ProjectedCRS.cpp  PureFlatCRS.cpp  TopocentricCRS.cpp
samples/simulator_dist/simulator/user_plugins/BasicAgentUtility/: .gitignore  CMakeLists.txt  builder.bat  builder.sh  pyproject.toml
samples/simulator_dist/simulator/user_plugins/BasicAirToAirCombatModels01/: CMakeLists.txt  pyproject.toml
samples/simulator_dist/simulator/user_plugins/R7ContestModels/: builder.bat  pyproject.toml
(+6834 files in other folders)
