[build-system]
requires = [
    "setuptools>=62.4",
    "wheel",
    "ASRCAISim1",
    "torch_truncnorm",
]
build-backend = "setuptools.build_meta"

[project]
name = "HandyRLUtility"
version = "1.0.0"
authors = [
    {name ="Air Systems Research Center, ATLA"},
]
dependencies = [
    "ASRCAISim1",
    "gymnasium",
    "numpy",
    "torch>=2.0.0, !=2.0.1", # issue #4858, #91863, #100884が発生するため2.0.1は不可
    "torch_truncnorm",
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.cmdclass]
egg_info = "ASRCAISim1.scripts.setup_command.egg_info"
sdist = "ASRCAISim1.scripts.setup_command.sdist"
build = "ASRCAISim1.scripts.setup_command.build"
install = "ASRCAISim1.scripts.setup_command.install"
clean = "ASRCAISim1.scripts.setup_command.clean"

[tool.ASRCAISim1]
is-core-plugin = true
enable-build-identification = false
core-plugins = [
    "torch_truncnorm",
]
user-plugins = [
]
