[build-system]
requires = [
    "setuptools>=62.4",
    "wheel",
    "ASRCAISim1",
    "rayUtility",
]
build-backend = "setuptools.build_meta"

[project]
name = "MatchMaker"
version = "1.0.0"
authors = [
    {name ="Air Systems Research Center, ATLA"},
]
dependencies = [
    "ASRCAISim1",
    "rayUtility",
    "cloudpickle",
    "ray[default,tune,rllib] >= 2.7.0",
    #"setuptools<=68", # ray<2.10を使用する場合はsetuptoolsのバージョンが68以下に制限される
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.cmdclass]
egg_info = "ASRCAISim1.scripts.setup_command.egg_info"
sdist = "ASRCAISim1.scripts.setup_command.sdist"
build = "ASRCAISim1.scripts.setup_command.build"
install = "ASRCAISim1.scripts.setup_command.install"
clean = "ASRCAISim1.scripts.setup_command.clean"

[tool.ASRCAISim1]
is-core-plugin = true
enable-build-identification = false
core-plugins = [
    "rayUtility",
]
user-plugins = [
]
