[build-system]
requires = [
    "setuptools>=62.4",
    "wheel",
    "ASRCAISim1",
    # ビルド時に必要なパッケージを追記する
    "BasicAirToAirCombatModels01",
]
build-backend = "setuptools.build_meta"

[project]
name = "BasicAgentUtility"
version = "1.0.0"
authors = [
    {name ="Air Systems Research Center, ATLA"},
]
dependencies = [
    "ASRCAISim1",
    # インストール後に使用する時に必要なパッケージを追記する
    "BasicAirToAirCombatModels01",
    #"torch>=2.0.0, !=2.0.1", #issue #4858, #91863, #100884が発生するため2.0.1は不可
    #"ray[default,tune,rllib] >= 2.7.0",
    #"setuptools<=68", # ray<2.10を使用する場合はsetuptoolsのバージョンが68以下に制限される
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.cmdclass]
egg_info = "ASRCAISim1.scripts.setup_command.egg_info"
sdist = "ASRCAISim1.scripts.setup_command.sdist"
build = "ASRCAISim1.scripts.setup_command.build"
install = "ASRCAISim1.scripts.setup_command.install"
clean = "ASRCAISim1.scripts.setup_command.clean"

[tool.ASRCAISim1]
is-core-plugin = false
enable-build-identification = false # trueにすると複数の異なるバージョンの同名パッケージを同時にインポートして使用可能となる
core-plugins = [
    # 依存するcoreプラグインがあれば列挙する
]
user-plugins = [
    # 依存するuserプラグインがあれば列挙する
    "BasicAirToAirCombatModels01",
]
